--- a/10_code/img_download_automation.ipynb
+++ b/10_code/img_download_automation.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "[214 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
       "text/html": [
        "<p>To authorize access needed by Earth Engine, open the following\n",
        "        URL in a web browser and follow the instructions:</p>\n",
-       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=vsxpzJ44ghWyRIwiagCA2naPCKJnCD-d-dF5MTdievU&tc=FU8b0KtKgvp1dFAYL5_TwQrcCQVeXThBEKhNyztGEYs&cc=prOjWOaaOpjq98eXCogzyLppnS387TECN8unrKA2VFM>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=vsxpzJ44ghWyRIwiagCA2naPCKJnCD-d-dF5MTdievU&tc=FU8b0KtKgvp1dFAYL5_TwQrcCQVeXThBEKhNyztGEYs&cc=prOjWOaaOpjq98eXCogzyLppnS387TECN8unrKA2VFM</a></p>\n",
+       "        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=OjxKNSkaIKTUlRa2p1Lxp9ukQVYiDP5UQB_gKp8wt8Q&tc=rCGy64O7M7Ee_cXXJWD9RxqMivO7lexWi1DDT64s0NQ&cc=FEagjwJEUoQLaxvEYZGqbPWr7jvYb7FzvSV2y8nUwjs>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=OjxKNSkaIKTUlRa2p1Lxp9ukQVYiDP5UQB_gKp8wt8Q&tc=rCGy64O7M7Ee_cXXJWD9RxqMivO7lexWi1DDT64s0NQ&cc=FEagjwJEUoQLaxvEYZGqbPWr7jvYb7FzvSV2y8nUwjs</a></p>\n",
        "        <p>The authorization workflow will generate a code, which you should paste in the box below.</p>\n",
        "        "
       ],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "[3104 rows x 4 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,44 +559,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_download = df.copy() # keep track of which plants have NOT been downloaded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download URL for Plant_24298754: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/6bd664254efb92661ab0bb7baecbef7c-7d925a496eead3d25fdcd7a93b7ed667:getPixels\n",
-      "Downloaded image for Plant_24298754.\n",
-      "Download URL for Plant_24396910: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/a4488eec758a7936918b335771c34753-1b5817d56c37d51c50e5c6386eb5e0a0:getPixels\n",
-      "Downloaded image for Plant_24396910.\n",
-      "Download URL for EBMUD Wastewater Treatment Plant: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/3b60dc2cc59f5089c8321066e5fefe75-1aef9c888fd1cecba0d5e712ebc48a9c:getPixels\n",
-      "Downloaded image for EBMUD Wastewater Treatment Plant.\n",
-      "Download URL for Hyperion Wastewater Treatment Plant: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/ea98549837c4a9e92ff68c7bf15aa222-e04211ca44ee31cb5b68d71c63d20021:getPixels\n",
-      "Downloaded image for Hyperion Wastewater Treatment Plant.\n",
-      "Download URL for San José–Santa Clara Regional Wastewater Facility: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/d6e052dd2460dba8b705460e01d15319-c3a616c3feca04bcf6f0b7e21db86896:getPixels\n",
-      "Downloaded image for San José–Santa Clara Regional Wastewater Facility.\n",
-      "Download URL for Sunnyvale Water Pollution Control Plant: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/6e5c00b61cf3a383a3306ef590870596-e9b06047cb2f2180845408e3a15a70bd:getPixels\n",
-      "Downloaded image for Sunnyvale Water Pollution Control Plant.\n",
-      "Download URL for Plant_30489168: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/ae344d7baca15b76058b7007840959cf-37d6e484009bb253a78b43761d2ae350:getPixels\n",
-      "Downloaded image for Plant_30489168.\n",
-      "Download URL for Burlingame Wastewater Treatment Plant: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/ff31dc54b4a62b085dff302c0d0fef9b-c28ddbd9134c84dbe5669cc036a57241:getPixels\n",
-      "Downloaded image for Burlingame Wastewater Treatment Plant.\n",
-      "Download URL for SMD3: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/a07c1d172a38a332f71b7af7e9d9f9c1-14a4909c5785a0350b4decc3d5ab7c1b:getPixels\n",
-      "Downloaded image for SMD3.\n",
-      "Download URL for Plant_32736826: https://earthengine.googleapis.com/v1alpha/projects/earthengine-legacy/thumbnails/332244a9af3ef91a9f1e21a462d3fff4-02b451807a4c8495aa9a00089efc1416:getPixels\n",
-      "Downloaded image for Plant_32736826.\n"
+      "Failed to get image for Wastewater Treatment Plant. Error: Total request size (260098476 bytes) must be less than or equal to 50331648 bytes.\n",
+      "Download URL for Regional Water Quality Control Plant: https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/26b81919f6157cef015b95cbe0ffd151-6fa066073829c29aa3bb2b227161bf19:getPixels\n",
+      "Downloaded image for Regional Water Quality Control Plant.\n",
+      "Download URL for Harry Tracy Water Treatment Plant: https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/af70db65e2abdc72706deab71f285340-953e3d41af70390af7c578159b802ffd:getPixels\n",
+      "Downloaded image for Harry Tracy Water Treatment Plant.\n",
+      "Download URL for Plant_40937006: https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/e2dfde383bdb6e3906e40fae89d8ad1d-6051d3afaf184afd20a54803df2db416:getPixels\n",
+      "Downloaded image for Plant_40937006.\n",
+      "Failed to get image for Davis Wetlands. Error: Total request size (83660724 bytes) must be less than or equal to 50331648 bytes.\n",
+      "Download URL for Plant_41166394: https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5605fd5f8b0e3bda6a80f17bb93c84a6-ddc6692929d98e7c15b3c5ae136fad21:getPixels\n",
+      "Downloaded image for Plant_41166394.\n",
+      "Download URL for Plant_41166395: https://earthengine.googleapis.com/v1/projects/earthengine-legacy/thumbnails/5743f3ae9873f918061844dcf03f1da2-dad53eee2a0e9be088bba237c663087b:getPixels\n",
+      "Downloaded image for Plant_41166395.\n"
      ]
     }
    ],
    "source": [
     "# Create a directory to save images\n",
-    "download_directory = \"downloaded_images\"\n",
+    "download_directory = \"../30_result/downloaded_images/\"\n",
     "if not os.path.exists(download_directory):\n",
     "    os.mkdir(download_directory)\n",
     "    \n",
     "# Iterate over each wastewater treatment plant and fetch its image\n",
-    "for idx, row in df.iterrows():\n",
+    "for idx, row in df_download.iterrows():\n",
     "    # 1. Get the bounding box for the current wastewater treatment plant\n",
     "    bbox = row.geometry.bounds\n",
     "    \n",
@@ -607,10 +608,10 @@
     "    center_y = (bbox[1] + bbox[3]) / 2\n",
     "    \n",
     "    # Define the region of interest using the center and transformed dimensions\n",
-    "    roi = ee.Geometry.Rectangle([center_x - length / 2, \\\n",
-    "                                center_y - height / 2, \\\n",
-    "                                center_x + length / 2, \\\n",
-    "                                center_y + height / 2])\n",
+    "    roi = ee.Geometry.Rectangle([center_x - length / 2.5, \\\n",
+    "                                center_y - height / 2.5, \\\n",
+    "                                center_x + length / 2.5, \\\n",
+    "                                center_y + height / 2.5])\n",
     "    collection = ee.ImageCollection('USDA/NAIP/DOQQ') \\\n",
     "        .filterBounds(roi) \\\n",
     "        .filterDate(ee.Date('2020-01-01'), ee.Date('2023-01-01')) \n",
@@ -619,25 +620,39 @@
     "    image = collection.first().clip(roi)\n",
     "    \n",
     "    # Generate a thumbnail URL for the visualization\n",
-    "    url = image.getThumbURL({\n",
-    "        'bands': ['R', 'G', 'B'],\n",
-    "        'region': roi,\n",
-    "        'format': 'png',  # or 'jpeg'\n",
-    "        'max': 255,\n",
-    "        'min': 0\n",
-    "    })\n",
+    "    try:\n",
+    "        url = image.getThumbURL({\n",
+    "            'bands': ['R', 'G', 'B'],\n",
+    "            'region': roi,\n",
+    "            'format': 'png',  # or 'jpeg'\n",
+    "            'max': 255,\n",
+    "            'min': 0\n",
+    "        })\n",
     "    \n",
-    "    print(f\"Download URL for {row['WWTP_name']}: {url}\")\n",
+    "        print(f\"Download URL for {row['WWTP_name']}: {url}\")\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"Failed to get image for {row['WWTP_name']}. Error: {e}\")\n",
+    "        continue\n",
     "\n",
     "    # Download the image\n",
-    "    response = requests.get(url)\n",
+    "    try:\n",
+    "        response = requests.get(url)\n",
+    "    except Exception as e:\n",
+    "        # if response.status_code != 200:\n",
+    "        print(f\"Failed to download image for {row['WWTP_name']}. Received status code: {response.status_code}\")\n",
+    "        continue\n",
+    "\n",
+    "\n",
     "    if 'image' in response.headers['Content-Type']:\n",
     "        with open(os.path.join(download_directory, f\"{row['WWTP_name']}.jpg\"), 'wb') as file:  # Changing extension to jpg\n",
     "            file.write(response.content)\n",
     "        print(f\"Downloaded image for {row['WWTP_name']}.\")\n",
-    "\n",
+    "        # delete the row in the dataframe\n",
+    "        df_download.drop(idx, inplace=True)\n",
     "    else:\n",
     "        print(f\"Failed to download image for {row['WWTP_name']}. Received content: {response.text}\")\n",
+    " \n",
     "\n",
     "    # Export to Google Drive\n",
     "    # task = ee.batch.Export.image.toDrive(\n",
@@ -652,16 +667,49 @@
     "    # )\n",
     "    # task.start()\n",
     "\n",
-    "    if idx == 9:\n",
-    "        break"
+    "    # if idx == 19:\n",
+    "    #     break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3091, 2)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_download.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3104, 2)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   }
  ],
  "metadata": {
@@ -680,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
