added 3k wwtp csv

--- a/10_code/img_download_automation.ipynb
+++ b/10_code/img_download_automation.ipynb
@@ -6910,6 +6910,15 @@
    "source": [
     "df_not_download.to_csv(\"../30_result/trouble_download.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../30_result/3k_WWTP_List.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
