texas csv filename added

--- a/10_code/Count_Files_Name_Csv.ipynb
+++ b/10_code/Count_Files_Name_Csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,35 +12,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/Users/yer1k/Library/CloudStorage/GoogleDrive-iamtsubasaozora@gmail.com/My Drive/Capstone Project/Data/tif_boudning_box/\""
+    "path = \"/Users/yer1k/Library/CloudStorage/GoogleDrive-iamtsubasaozora@gmail.com/My Drive/Capstone Project/Data/tif_bounding_box/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write a df from files' names without extension\n",
     "name_lst = [\"Dingkun\", \"Pooja\", \"Sukhpreet\", \"Yuanjing\"]\n",
+    "texas = \"/Texas\"\n",
     "for name in name_lst:\n",
     "    df = pd.DataFrame()\n",
-    "    df['filename'] = [f.split('.')[0] for f in os.listdir(path + name)]\n",
+    "    df['filename'] = [f.split('.')[0] for f in os.listdir(path + name + texas)]\n",
     "    df = df.drop_duplicates()\n",
     "    df.reset_index(drop=True, inplace=True)\n",
-    "    df.to_csv(f'{name}_image_filenames.csv', index=False)\n"
+    "    df.to_csv(f'{name}_Texas_image_filenames.csv', index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
