add geopanda data ipynp

--- a/10_code/Read Geopanda data.ipynb
+++ b/10_code/Read Geopanda data.ipynb
@@ -11,12 +11,445 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read in geopanda folder\n",
     "gdf = gpd.read_file('../00_source_data/FRS_Wastewater/CWA_summaries_060314.gdb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SOURCE_ID</th>\n",
+       "      <th>EPA_SYSTEM</th>\n",
+       "      <th>REGISTRY_ID</th>\n",
+       "      <th>STATUTE</th>\n",
+       "      <th>CWP_NAME</th>\n",
+       "      <th>CWP_STREET</th>\n",
+       "      <th>CWP_CITY</th>\n",
+       "      <th>CWP_STATE</th>\n",
+       "      <th>CWP_STATE_DISTRICT</th>\n",
+       "      <th>CWP_ZIP</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CWP_COMPLIANCE_TRACKING</th>\n",
+       "      <th>FAC_TRI_REPORTER</th>\n",
+       "      <th>CWP_CURRENT_VIOL13</th>\n",
+       "      <th>CWP_13QTRS_COMPL_STATUS</th>\n",
+       "      <th>SIC_CODES</th>\n",
+       "      <th>NAICS_CODES</th>\n",
+       "      <th>CASE_IDS</th>\n",
+       "      <th>STATE_WATER_BODY</th>\n",
+       "      <th>STATE_WATER_BODY_NAME</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>449374</th>\n",
+       "      <td>MD0068179</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110006744283</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>SNOW HILL DISTRICT COURT - SOCIAL SERVICES COM...</td>\n",
+       "      <td>299 - 301 COMMERCE STREET</td>\n",
+       "      <td>SNOW HILL</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21863</td>\n",
+       "      <td>...</td>\n",
+       "      <td>On</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>UUUUUUU__VVV_</td>\n",
+       "      <td>9211</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POCOMOKE RIVER - LOWER</td>\n",
+       "      <td>POINT (-8392963.955 4604963.813)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>385730</th>\n",
+       "      <td>IN0003778</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110028080225</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>NORFOLK SOUTHERN RAILWAY CO</td>\n",
+       "      <td>333 N SMITH ST</td>\n",
+       "      <td>PERU</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>469701376</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>_____________</td>\n",
+       "      <td>4011</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>051201010001</td>\n",
+       "      <td>Í</td>\n",
+       "      <td>POINT (-9579623.159 4977531.327)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158220</th>\n",
+       "      <td>LAG533594</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110043269691</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>CUZ STORAGE LLC</td>\n",
+       "      <td>3810 HWY 56</td>\n",
+       "      <td>HOUMA</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70363</td>\n",
+       "      <td>...</td>\n",
+       "      <td>On</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>_____________</td>\n",
+       "      <td>4225</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-10090585.299 3447144.560)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123009</th>\n",
+       "      <td>MTR102828</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110033201728</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>BURLINGTON RESOURCES - BR 41-29H 28</td>\n",
+       "      <td>SW OF SIDNEY</td>\n",
+       "      <td>SIDNEY</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>59270</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>__VVV_UU_____</td>\n",
+       "      <td>1629</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NORTH FORK CREEK</td>\n",
+       "      <td>POINT (-11610019.872 6047822.902)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142103</th>\n",
+       "      <td>AL0041726</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110009121976</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>WALKER CO BOE CURRY ELEMENTARY AND HIGH SCHOOL</td>\n",
+       "      <td>85 YELLOW JACKET DRIVE</td>\n",
+       "      <td>JASPER</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35503</td>\n",
+       "      <td>...</td>\n",
+       "      <td>On</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SSV_V_VSSS___</td>\n",
+       "      <td>8211</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>03160109</td>\n",
+       "      <td>UT TO ROCK CREEK</td>\n",
+       "      <td>POINT (-9708967.502 4023070.705)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312809</th>\n",
+       "      <td>FLR10GZ16</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110020171286</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>NORTH RIDGE SUBDIVISION</td>\n",
+       "      <td>SR 11 NEAR EVERGREEN TERRACE</td>\n",
+       "      <td>DELAND</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32720</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>__________UU_</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-9050837.656 3386909.963)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368416</th>\n",
+       "      <td>WVG551069</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110011529612</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>WASHINGTON DISTRICT ELEMENTARY</td>\n",
+       "      <td>HC 36, BOX 234</td>\n",
+       "      <td>BUCKHANNON</td>\n",
+       "      <td>WV</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26201</td>\n",
+       "      <td>...</td>\n",
+       "      <td>On</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>_____________</td>\n",
+       "      <td>4952</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>05020001</td>\n",
+       "      <td>UNT/TRUBIE RN RM 2.21/BUCKHANNON RV</td>\n",
+       "      <td>POINT (-8923905.049 4716945.851)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390462</th>\n",
+       "      <td>FLR10FL76</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110032810484</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>SOUTHPOINTE PLAZA</td>\n",
+       "      <td>580 US HIGHWAY 1</td>\n",
+       "      <td>VERO BEACH</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>32962</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>________U____</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-8948231.698 3200031.670)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8055</th>\n",
+       "      <td>ALR163544</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110020531502</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>WHITE OAK GOLF COURSE</td>\n",
+       "      <td>DONALD W BOUTWELL</td>\n",
+       "      <td>GREENVILLE</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Off</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>_____________</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-9647503.670 3746840.711)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328895</th>\n",
+       "      <td>LAG480173</td>\n",
+       "      <td>ICP</td>\n",
+       "      <td>110001317487</td>\n",
+       "      <td>CWA</td>\n",
+       "      <td>HALLIBURTON ENERGY SERVICES</td>\n",
+       "      <td>182 N. DOUCET DR</td>\n",
+       "      <td>GOLDEN MEADOW</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70357</td>\n",
+       "      <td>...</td>\n",
+       "      <td>On</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>_____________</td>\n",
+       "      <td>1389</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>08090301</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-10042665.598 3391453.107)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 54 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        SOURCE_ID EPA_SYSTEM   REGISTRY_ID STATUTE  \\\n",
+       "449374  MD0068179        ICP  110006744283     CWA   \n",
+       "385730  IN0003778        ICP  110028080225     CWA   \n",
+       "158220  LAG533594        ICP  110043269691     CWA   \n",
+       "123009  MTR102828        ICP  110033201728     CWA   \n",
+       "142103  AL0041726        ICP  110009121976     CWA   \n",
+       "312809  FLR10GZ16        ICP  110020171286     CWA   \n",
+       "368416  WVG551069        ICP  110011529612     CWA   \n",
+       "390462  FLR10FL76        ICP  110032810484     CWA   \n",
+       "8055    ALR163544        ICP  110020531502     CWA   \n",
+       "328895  LAG480173        ICP  110001317487     CWA   \n",
+       "\n",
+       "                                                 CWP_NAME  \\\n",
+       "449374  SNOW HILL DISTRICT COURT - SOCIAL SERVICES COM...   \n",
+       "385730                        NORFOLK SOUTHERN RAILWAY CO   \n",
+       "158220                                    CUZ STORAGE LLC   \n",
+       "123009                BURLINGTON RESOURCES - BR 41-29H 28   \n",
+       "142103     WALKER CO BOE CURRY ELEMENTARY AND HIGH SCHOOL   \n",
+       "312809                            NORTH RIDGE SUBDIVISION   \n",
+       "368416                     WASHINGTON DISTRICT ELEMENTARY   \n",
+       "390462                                  SOUTHPOINTE PLAZA   \n",
+       "8055                                WHITE OAK GOLF COURSE   \n",
+       "328895                        HALLIBURTON ENERGY SERVICES   \n",
+       "\n",
+       "                          CWP_STREET       CWP_CITY CWP_STATE  \\\n",
+       "449374     299 - 301 COMMERCE STREET      SNOW HILL        MD   \n",
+       "385730                333 N SMITH ST           PERU        IN   \n",
+       "158220                   3810 HWY 56          HOUMA        LA   \n",
+       "123009                  SW OF SIDNEY         SIDNEY        MT   \n",
+       "142103        85 YELLOW JACKET DRIVE         JASPER        AL   \n",
+       "312809  SR 11 NEAR EVERGREEN TERRACE         DELAND        FL   \n",
+       "368416                HC 36, BOX 234     BUCKHANNON        WV   \n",
+       "390462              580 US HIGHWAY 1     VERO BEACH        FL   \n",
+       "8055               DONALD W BOUTWELL     GREENVILLE        AL   \n",
+       "328895              182 N. DOUCET DR  GOLDEN MEADOW        LA   \n",
+       "\n",
+       "        CWP_STATE_DISTRICT    CWP_ZIP  ... CWP_COMPLIANCE_TRACKING  \\\n",
+       "449374                 NaN      21863  ...                      On   \n",
+       "385730                 NaN  469701376  ...                     Off   \n",
+       "158220                 NaN      70363  ...                      On   \n",
+       "123009                 NaN      59270  ...                     Off   \n",
+       "142103                 NaN      35503  ...                      On   \n",
+       "312809                 NaN      32720  ...                     Off   \n",
+       "368416                 NaN      26201  ...                      On   \n",
+       "390462                 NaN      32962  ...                     Off   \n",
+       "8055                   NaN      36037  ...                     Off   \n",
+       "328895                 NaN      70357  ...                      On   \n",
+       "\n",
+       "       FAC_TRI_REPORTER CWP_CURRENT_VIOL13 CWP_13QTRS_COMPL_STATUS SIC_CODES  \\\n",
+       "449374              NaN                Yes           UUUUUUU__VVV_      9211   \n",
+       "385730              NaN                NaN           _____________      4011   \n",
+       "158220              NaN                NaN           _____________      4225   \n",
+       "123009              NaN                NaN           __VVV_UU_____      1629   \n",
+       "142103              NaN                NaN           SSV_V_VSSS___      8211   \n",
+       "312809              NaN                NaN           __________UU_       NaN   \n",
+       "368416              NaN                NaN           _____________      4952   \n",
+       "390462              NaN                NaN           ________U____       NaN   \n",
+       "8055                NaN                NaN           _____________       NaN   \n",
+       "328895              NaN                NaN           _____________      1389   \n",
+       "\n",
+       "       NAICS_CODES CASE_IDS STATE_WATER_BODY  \\\n",
+       "449374         NaN      NaN              NaN   \n",
+       "385730         NaN      NaN     051201010001   \n",
+       "158220         NaN      NaN              NaN   \n",
+       "123009         NaN      NaN              NaN   \n",
+       "142103         NaN      NaN         03160109   \n",
+       "312809         NaN      NaN              NaN   \n",
+       "368416         NaN      NaN         05020001   \n",
+       "390462         NaN      NaN              NaN   \n",
+       "8055           NaN      NaN              NaN   \n",
+       "328895         NaN      NaN         08090301   \n",
+       "\n",
+       "                      STATE_WATER_BODY_NAME                           geometry  \n",
+       "449374               POCOMOKE RIVER - LOWER   POINT (-8392963.955 4604963.813)  \n",
+       "385730                                    Í   POINT (-9579623.159 4977531.327)  \n",
+       "158220                                  NaN  POINT (-10090585.299 3447144.560)  \n",
+       "123009                     NORTH FORK CREEK  POINT (-11610019.872 6047822.902)  \n",
+       "142103                     UT TO ROCK CREEK   POINT (-9708967.502 4023070.705)  \n",
+       "312809                                  NaN   POINT (-9050837.656 3386909.963)  \n",
+       "368416  UNT/TRUBIE RN RM 2.21/BUCKHANNON RV   POINT (-8923905.049 4716945.851)  \n",
+       "390462                                  NaN   POINT (-8948231.698 3200031.670)  \n",
+       "8055                                    NaN   POINT (-9647503.670 3746840.711)  \n",
+       "328895                                  NaN  POINT (-10042665.598 3391453.107)  \n",
+       "\n",
+       "[10 rows x 54 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show random 10 rows\n",
+    "gdf.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['SOURCE_ID', 'EPA_SYSTEM', 'REGISTRY_ID', 'STATUTE', 'CWP_NAME',\n",
+       "       'CWP_STREET', 'CWP_CITY', 'CWP_STATE', 'CWP_STATE_DISTRICT', 'CWP_ZIP',\n",
+       "       'CWP_COUNTY', 'CWP_EPA_REGION', 'CWP_STATUS', 'CWP_INDIAN_CNTRY_FLG',\n",
+       "       'CWP_TRIBAL_LAND_CODE', 'CWP_PERMIT_STATUS_CODE',\n",
+       "       'CWP_PERMIT_STATUS_DESC', 'CWP_PERMIT_TYPE_CODE',\n",
+       "       'CWP_PERMIT_TYPE_DESC', 'CWP_EXPIRATION_DATE',\n",
+       "       'CWP_FACILITY_TYPE_INDICATOR', 'CWP_MAJOR_MINOR_STATUS_FLAG',\n",
+       "       'FAC_FEDERAL_AGENCY_CODE', 'CWP_CURRENT_SNC_STATUS',\n",
+       "       'CWP_SNC_EVENT_DESC', 'CWP_CURRENT_SNC_STATUS_DATE', 'CWP_CURRENT_VIOL',\n",
+       "       'CWP_DATE_LAST_INSPECTION', 'CWP_DATE_LAST_INFORMAL_EA',\n",
+       "       'FAC_US_MEX_BORDER_FLG', 'CWP_IMP_WATER_FLG', 'FAC_DERIVED_HUC',\n",
+       "       'FAC_MAP_FLG', 'FAC_MAP_ICON', 'FAC_FIPS_CODE', 'CWP_CSO_FLAG',\n",
+       "       'CWP_DATE_LAST_FEA', 'CWP_DATE_LAST_FEA_ST', 'CWP_DATE_LAST_FEA_EPA',\n",
+       "       'CWP_DATE_LAST_IEA_ST', 'CWP_DATE_LAST_IEA_EPA',\n",
+       "       'CWP_DATE_LAST_INSP_EPA', 'CWP_DATE_LAST_INSP_ST',\n",
+       "       'CWP_DATE_LAST_PENALTY', 'CWP_COMPLIANCE_TRACKING', 'FAC_TRI_REPORTER',\n",
+       "       'CWP_CURRENT_VIOL13', 'CWP_13QTRS_COMPL_STATUS', 'SIC_CODES',\n",
+       "       'NAICS_CODES', 'CASE_IDS', 'STATE_WATER_BODY', 'STATE_WATER_BODY_NAME',\n",
+       "       'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show column names\n",
+    "gdf.columns"
    ]
   },
   {
